DevSecOps/K8S/istio-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingress
    app.kubernetes.io/instance: istio-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingress
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.29.0
    helm.sh/chart: gateway-1.29.0
    istio: ingress
    istio.io/dataplane-mode: none
  name: istio-ingress
  namespace: dev
spec:
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: istio-ingress
    istio: ingress
  type: ClusterIP
